Adds HassEventHandler to watch for light on events
Simplify existing light ID handling